--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -4,6 +4,7 @@
 
     <img src="./assets/Images/image 3.jpg" />
     <span class="main-spacer"></span>
+
     <div fxHide.lt-lg>
       <button mat-button routerLink="/Home" (click)="reload()" matTooltip="Home Page" style="margin-bottom:3px">
         <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer"  style="font-size: 16pt;"></mat-icon>
@@ -42,27 +43,14 @@
         Help
       </button>
 
-      <button matBadge="{{numNotifications}}" matBadgeColor="warn" [matBadgeHidden]="hidden" routerLink="/NotificationHub" mat-button style="margin-bottom:2px">
-        <mat-icon aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer" style="font-size: 16pt;"
+      <button  routerLink="/NotificationHub" mat-button style="margin-bottom:2px">
+        <mat-icon matBadge="{{numNotifications}}" matBadgeColor="warn" [matBadgeHidden]="hidden" aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer" style="font-size: 16pt;"
                   ></mat-icon>
       </button>
 
-      <!--<a *ngIf="rAdmin" class="sub-spacer"
-  style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee"
-  mat-button (click)="reload()">Administration</a>-->
-      <!--<a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable"
-  mat-button (click)="reload()">Inventory</a>-->
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;"
-     routerLink="/ViewBudgetAllocation" mat-button (click)="reload()">Finance</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewProcurementRequest" mat-button (click)="reload()">Procurement</a>
-  <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/request-view"
-     mat-button (click)="reload()">Vendor</a>-->
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()">Reports</a>
-      <a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()" (click)="HelpRoute()">Help</a>
-      <mat-icon aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer"
-                style="font-size:19pt;" matBadge="{{numNotifications}}" matBadgeColor="warn" [matBadgeHidden]="hidden" routerLink="/NotificationHub"></mat-icon>-->
     </div>
 
+    <!--------------------------------------------------------------------------------Minimized------------------------------------------------------------------------------------->
     <img *ngIf="this.isLoggedIn === true" class="image-container" src="{{usr.profile_Picture}}" style="object-fit: cover;" [matMenuTriggerFor]="beforeMenu" />
     <mat-menu #beforeMenu="matMenu" xPosition="before">
       <button mat-menu-item routerLink="/Profile" (click)="reload()"><mat-icon matPrefix>pageview</mat-icon>Profile</button>
@@ -80,41 +68,35 @@
       <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewEmployee" (click)="reload()">
         Administration
       </button>
-      <!--<a *ngIf="rAdmin" class="sub-spacer"
-    style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee"
-    mat-button (click)="reload()">Administration</a>-->
-      <!--<a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable"
-    mat-button (click)="reload()">Inventory</a>-->
-      <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewConsumable" (click)="reload()">
+
+      <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewConsumable" (click)="reload()">
         Inventory
       </button>
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;"
-    routerLink="/ViewBudgetAllocation" mat-button (click)="reload()">Finance</a>-->
+
       <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewBudgetAllocation" (click)="reload()">
         Finance
       </button>
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewProcurementRequest" mat-button (click)="reload()">Procurement</a>-->
-      <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewProcurementRequest" (click)="reload()">
+
+      <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/ViewProcurementRequest" (click)="reload()">
         Procurement
       </button>
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/request-view"
-    mat-button (click)="reload()">Vendor</a>-->
-      <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/request-view" (click)="reload()">
+
+      <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" routerLink="/request-view" (click)="reload()">
         Vendor
       </button>
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()">Reports</a>-->
-      <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" (click)="reload()" routerLink="/ReportsMainView">
+
+      <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" (click)="reload()" routerLink="/ReportsMainView">
         Reports
       </button>
-      <!--<a class="sub-spacer" style="font-size: 16pt; text-decoration: none; color: white;" mat-button (click)="reload()" (click)="HelpRoute()">Help</a>-->
-      <button mat-menu-item *ngIf="rAdmin" style="font-size: 16pt; text-decoration: none; color: black;" (click)="HelpRoute()" (click)="reload()">
+
+      <button mat-menu-item style="font-size: 16pt; text-decoration: none; color: black;" (click)="HelpRoute()" (click)="reload()">
         Help
       </button>
+
       <button mat-menu-item routerLink="/NotificationHub" (click)="reload()" matBadge="{{numNotifications}}" matBadgeColor="warn" [matBadgeHidden]="hidden">
         Notifications
       </button>
-      <!--<mat-icon aria-hidden="false" aria-label="notification icon" fontIcon="notifications" class="sub-spacer"
-               ></mat-icon>-->
+
     </mat-menu>
   </mat-toolbar>
 </div>
